NetBSD Problem Report #42943

From www@NetBSD.org  Wed Mar 10 06:32:11 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 64BF863BFF3
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 10 Mar 2010 06:32:11 +0000 (UTC)
Message-Id: <20100310063210.D2BE763B873@www.NetBSD.org>
Date: Wed, 10 Mar 2010 06:32:10 +0000 (UTC)
From: sogabe@iij.ad.jp
Reply-To: sogabe@iij.ad.jp
To: gnats-bugs@NetBSD.org
Subject: pppd generates invalid netmask
X-Send-Pr-Version: www-1.0

>Number:         42943
>Category:       bin
>Synopsis:       pppd generates invalid netmask
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 10 06:35:00 +0000 2010
>Closed-Date:    Wed Mar 10 13:46:31 +0000 2010
>Last-Modified:  Sat Mar 13 18:30:02 +0000 2010
>Originator:     Takashi Sogabe
>Release:        3.0
>Organization:
Internet Initiative Japan., Inc.
>Environment:
(n/a)
>Description:
In sys-bsd.c(usr.sbin/pppd/pppd), GetMask() generates invalid netmask.

>How-To-Repeat:

>Fix:
Remove '&' in GetMask().

sys-bsd.c:GetMask()
(original code)
        /*
         * Get its netmask and OR it into our mask.
         */
        mask |= ((struct sockaddr_in *)&ifa->ifa_netmask)->sin_addr.s_addr;

(fixed code)
        /*
         * Get its netmask and OR it into our mask.
         */
        mask |= ((struct sockaddr_in *)ifa->ifa_netmask)->sin_addr.s_addr;

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Wed, 10 Mar 2010 08:46:31 -0500
State-Changed-Why:
fixed, thanks


From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42943 CVS commit: src/usr.sbin/pppd/pppd
Date: Wed, 10 Mar 2010 08:45:39 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Mar 10 13:45:39 UTC 2010

 Modified Files:
 	src/usr.sbin/pppd/pppd: sys-bsd.c

 Log Message:
 PR/42943: Takashi Sogabe: pppd generates invalid netmask


 To generate a diff of this commit:
 cvs rdiff -u -r1.61 -r1.62 src/usr.sbin/pppd/pppd/sys-bsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Bernd Ernesti <netbsd@lists.veego.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/42943 (pppd generates invalid netmask)
Date: Wed, 10 Mar 2010 19:08:03 +0100

 On Wed, Mar 10, 2010 at 01:46:33PM +0000, christos@NetBSD.org wrote:
 > Synopsis: pppd generates invalid netmask
 > 
 > State-Changed-From-To: open->closed
 > State-Changed-By: christos@NetBSD.org
 > State-Changed-When: Wed, 10 Mar 2010 08:46:31 -0500
 > State-Changed-Why:
 > fixed, thanks

 The pr was filled against 3.0 (I asume that was NetBSD 3.0) so I think
 this needs some pullups.

 Bernd

From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, 
	sogabe@iij.ad.jp
Cc: 
Subject: Re: bin/42943 (pppd generates invalid netmask)
Date: Wed, 10 Mar 2010 13:10:54 -0500

 On Mar 10,  6:10pm, netbsd@lists.veego.de (Bernd Ernesti) wrote:
 -- Subject: Re: bin/42943 (pppd generates invalid netmask)

 | The following reply was made to PR bin/42943; it has been noted by GNATS.
 | 
 | From: Bernd Ernesti <netbsd@lists.veego.de>
 | To: gnats-bugs@NetBSD.org
 | Cc: 
 | Subject: Re: bin/42943 (pppd generates invalid netmask)
 | Date: Wed, 10 Mar 2010 19:08:03 +0100
 | 
 |  On Wed, Mar 10, 2010 at 01:46:33PM +0000, christos@NetBSD.org wrote:
 |  > Synopsis: pppd generates invalid netmask
 |  > 
 |  > State-Changed-From-To: open->closed
 |  > State-Changed-By: christos@NetBSD.org
 |  > State-Changed-When: Wed, 10 Mar 2010 08:46:31 -0500
 |  > State-Changed-Why:
 |  > fixed, thanks
 |  
 |  The pr was filled against 3.0 (I asume that was NetBSD 3.0) so I think
 |  this needs some pullups.

 Sure, to 4.x and 5.x?

 christos

From: Bernd Ernesti <netbsd@lists.veego.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/42943 (pppd generates invalid netmask)
Date: Wed, 10 Mar 2010 19:28:35 +0100

 On Wed, Mar 10, 2010 at 01:10:54PM -0500, Christos Zoulas wrote:
 > On Mar 10,  6:10pm, netbsd@lists.veego.de (Bernd Ernesti) wrote:
 > -- Subject: Re: bin/42943 (pppd generates invalid netmask)
 > 
 > | The following reply was made to PR bin/42943; it has been noted by GNATS.
 > | 
 > | From: Bernd Ernesti <netbsd@lists.veego.de>
 > | To: gnats-bugs@NetBSD.org
 > | Cc: 
 > | Subject: Re: bin/42943 (pppd generates invalid netmask)
 > | Date: Wed, 10 Mar 2010 19:08:03 +0100
 > | 
 > |  On Wed, Mar 10, 2010 at 01:46:33PM +0000, christos@NetBSD.org wrote:
 > |  > Synopsis: pppd generates invalid netmask
 > |  > 
 > |  > State-Changed-From-To: open->closed
 > |  > State-Changed-By: christos@NetBSD.org
 > |  > State-Changed-When: Wed, 10 Mar 2010 08:46:31 -0500
 > |  > State-Changed-Why:
 > |  > fixed, thanks
 > |  
 > |  The pr was filled against 3.0 (I asume that was NetBSD 3.0) so I think
 > |  this needs some pullups.
 > 
 > Sure, to 4.x and 5.x?

 Yeah, because 3.0 is not supported anymore.

 It looks like it would apply cleanly because there are no changes since rev 1.55
 in that area.

 Bernd

From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42943 CVS commit: [netbsd-4] src/usr.sbin/pppd/pppd
Date: Sat, 13 Mar 2010 18:24:44 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sat Mar 13 18:24:44 UTC 2010

 Modified Files:
 	src/usr.sbin/pppd/pppd [netbsd-4]: sys-bsd.c

 Log Message:
 Pull up following revision(s) (requested by christos in ticket #1389):
 	usr.sbin/pppd/pppd/sys-bsd.c: revision 1.62
 PR/42943: Takashi Sogabe: pppd generates invalid netmask


 To generate a diff of this commit:
 cvs rdiff -u -r1.55 -r1.55.4.1 src/usr.sbin/pppd/pppd/sys-bsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42943 CVS commit: [netbsd-5] src/usr.sbin/pppd/pppd
Date: Sat, 13 Mar 2010 18:27:32 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sat Mar 13 18:27:32 UTC 2010

 Modified Files:
 	src/usr.sbin/pppd/pppd [netbsd-5]: sys-bsd.c

 Log Message:
 Pull up following revision(s) (requested by christos in ticket #1335):
 	usr.sbin/pppd/pppd/sys-bsd.c: revision 1.62
 PR/42943: Takashi Sogabe: pppd generates invalid netmask


 To generate a diff of this commit:
 cvs rdiff -u -r1.58.2.1 -r1.58.2.2 src/usr.sbin/pppd/pppd/sys-bsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.