PR/42943: Takashi Sogabe: pppd generates invalid netmask